Letter-Boxed-Solver improvements  - Added sortable table of valid words  - Made editing the solution easier  - Made the dictionary keep a decent height on mobile

--- a/assets/styles/letter-boxed-solver.css
+++ b/assets/styles/letter-boxed-solver.css
@@ -11,6 +11,7 @@
     border: none;
 }
 
+th,
 td,
 table {
     border-collapse: collapse;
@@ -18,6 +19,14 @@ table {
     text-align: center;
     vertical-align: middle;
     padding: 10px;
+}
+
+#dictionary_input,
+.best_words_table_container {
+    min-height: 15em;
+    max-height: 33vh;
+    overflow: auto;
+    outline: solid 1px var(--text-mute-color);
 }
 
 /* Match the colour of the real puzzle */
